--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ JWT_SECRET=jhvhgdfcnhvjhgchjhjhg
 BRAINTREE_MERCHANT_ID=9dvqxzw9sj636jb3
 BRAINTREE_PUBLIC_KEY=4cdwq5wdntghrj4t
 BRAINTREE_PRIVATE_KEY=6767f978ddc84e0f93896a32b039ec9d
+MONGO_URI=mongodb+srv://shivsanscool502:gXtnPzX0uhMJbP0X@cluster0.1grfonr.mongodb.net/?retryWrites=true&w=majority
