--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,19 @@
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "colors": "^1.4.0",
+    "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-formidable": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.4",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
+    "react-icons": "^4.7.1",
+    "slugify": "^1.6.5"
   },
   "scripts": {
     "start": "react-scripts start",
